--- a/base.less
+++ b/base.less
@@ -996,8 +996,10 @@
 			border-bottom: 1px solid #DBDBDB;
 			font-size: @fs28;
 			line-height: 1.5;
+			word-wrap: break-word;
 			em{
 				color: @grey;
+				white-space: nowrap;
 			}
 		}
 		&> .p10.share{
